--- a/configure.in
+++ b/configure.in
@@ -239,8 +239,10 @@ fi
 dnl
 dnl check for kernel headers required by qemud/bridge.c
 dnl
-AC_CHECK_HEADERS(linux/param.h linux/sockios.h linux/if_bridge.h linux/if_tun.h,,
-                 AC_MSG_ERROR([You must install kernel-headers in order to compile libvirt]))
+if test "$with_qemu" = "yes" ; then
+  AC_CHECK_HEADERS(linux/param.h linux/sockios.h linux/if_bridge.h linux/if_tun.h,,
+                   AC_MSG_ERROR([You must install kernel-headers in order to compile libvirt]))
+fi
 
 dnl ==========================================================================
 dnl find libxml2 library, borrowed from xmlsec
