Avoid portability warnings from automake

--- a/configure.in
+++ b/configure.in
@@ -1,25 +1,18 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(src/libvirt.c)
+
+AC_INIT(libvirt, 0.3.2)
+AC_CONFIG_SRCDIR(src/libvirt.c)
 AM_CONFIG_HEADER(config.h)
+dnl Make automake keep quiet about wildcards & other GNUmake-isms
+AM_INIT_AUTOMAKE([-Wno-portability])
 AC_CANONICAL_HOST
 
-LIBVIRT_MAJOR_VERSION=0
-LIBVIRT_MINOR_VERSION=3
-LIBVIRT_MICRO_VERSION=2
-LIBVIRT_MICRO_VERSION_SUFFIX=
+LIBVIRT_MAJOR_VERSION=`echo $VERSION | awk -F . '{print $1}'`
+LIBVIRT_MINOR_VERSION=`echo $VERSION | awk -F . '{print $2}'`
+LIBVIRT_MICRO_VERSION=`echo $VERSION | awk -F . '{print $3}'`
 LIBVIRT_VERSION=$LIBVIRT_MAJOR_VERSION.$LIBVIRT_MINOR_VERSION.$LIBVIRT_MICRO_VERSION$LIBVIRT_MICRO_VERSION_SUFFIX
 LIBVIRT_VERSION_INFO=`expr $LIBVIRT_MAJOR_VERSION + $LIBVIRT_MINOR_VERSION`:$LIBVIRT_MICRO_VERSION:$LIBVIRT_MINOR_VERSION
-
 LIBVIRT_VERSION_NUMBER=`expr $LIBVIRT_MAJOR_VERSION \* 1000000 + $LIBVIRT_MINOR_VERSION \* 1000 + $LIBVIRT_MICRO_VERSION`
-
-if test -f CVS/Entries; then
-  extra=`grep ChangeLog CVS/Entries | grep -v LIBVIR | sed -e s\%/ChangeLog/1\.%% -e s\%/.*$%%`
-  echo extra=$extra
-  if test "$extra" != ""
-  then
-      LIBVIRT_VERSION_EXTRA="-CVS$extra"
-  fi
-fi
 
 AC_SUBST(LIBVIRT_MAJOR_VERSION)
 AC_SUBST(LIBVIRT_MINOR_VERSION)
@@ -27,11 +20,6 @@ AC_SUBST(LIBVIRT_MICRO_VERSION)
 AC_SUBST(LIBVIRT_VERSION)
 AC_SUBST(LIBVIRT_VERSION_INFO)
 AC_SUBST(LIBVIRT_VERSION_NUMBER)
-AC_SUBST(LIBVIRT_VERSION_EXTRA)
-
-VERSION=${LIBVIRT_VERSION}
-
-AM_INIT_AUTOMAKE(libvirt, $VERSION)
 
 dnl Checks for programs.
 AC_PROG_CC
