* src/Makefile.am: fix tst build rule * src/buf.c: fix virBufferContentAndFree to make sure the string is   always 0 terminated. Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -77,7 +77,7 @@ virsh_CFLAGS = $(COVERAGE_CFLAGS)
 # target to ease building test programs
 #
 tst: tst.c
-	$(CC) $(CFLAGS) -I../include -o tst tst.c .libs/libvirt.a -lxml2 -lxenstore -lpthread
+	$(CC) $(CFLAGS) $(INCLUDES) -I../include -o tst tst.c .libs/libvirt.a -lxml2 -lxenstore -lpthread
 
 COVERAGE_FILES = $(CLIENT_SOURCES:%.c=libvirt_la-%.cov)
 
