Begin fixing uses of strtol: parse integers more carefully. Patch from Jim Meyering * src/internal.h: Include <errno.h>.   Define new static inline function, xstrtol_i. * src/virsh.c: Detect integer overflow in domain ID number   in vshCommandOptDomainBy. Detect overflow and invalid port   number suffix in cmdVNCDisplay. * src/xend_internal.c: Parse CPU number more carefully in   xenDaemonDomainGetVcpus. * tests/int-overflow: New script. Test for the above-fixed bug. * tests/Makefile.am: Add int-overflow to TESTS. Define   TESTS_ENVIRONMENT, to propagate $abs_top_* variables into the   int-overflow script. Adapt the "valgrind" rule not to clobber   new TESTS_ENVIRONMENT. Daniel

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -38,13 +38,19 @@ noinst_PROGRAMS = xmlrpctest xml2sexprtest sexpr2xmltest virshtest conftest \
         nodeinfotest
 
 TESTS = xml2sexprtest sexpr2xmltest virshtest test_conf.sh xmconfigtest \
-        xencapstest qemuxml2argvtest qemuxml2xmltest nodeinfotest
+        xencapstest qemuxml2argvtest qemuxml2xmltest nodeinfotest \
+	int-overflow
 if ENABLE_XEN_TESTS
   TESTS += reconnect
 endif
 
+TESTS_ENVIRONMENT =				\
+  abs_top_builddir='$(abs_top_builddir)'	\
+  abs_top_srcdir='$(abs_top_srcdir)'		\
+  $(VG)
+
 valgrind:
-	$(MAKE) check TESTS_ENVIRONMENT="valgrind --quiet --leak-check=full"
+	$(MAKE) check VG="valgrind --quiet --leak-check=full"
 
 # Note: xmlrpc.[c|h] is not in libvirt yet
 xmlrpctest_SOURCES = \
