Arrange for tests to pass in a non-srcdir build.
* tests/Makefile.am: Include the contents of the *data directories
in the make-dist-built tarball by adding each of that *data
directories to EXTRA_DIST.
Also add int-overflow (via $(test_scripts)) to EXTRA_DIST.
* tests/nodeinfotest.c: Prepend "$abs_top_srcdir/tests" to
each input file name.
* tests/qemuxml2argvtest.c: Likewise.
* tests/qemuxml2xmltest.c: Likewise.
* tests/sexpr2xmltest.c: Likewise.
* tests/test_conf.sh: Likewise.
* tests/virshtest.c: Likewise.
* tests/xencapstest.c: Likewise.
* tests/xmconfigtest.c: Likewise.
* tests/xml2sexprtest.c: Likewise.


Author: Jim Meyering <meyering@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -31,15 +31,29 @@ LDADDS = \
 	$(LIBVIRT) \
         $(COVERAGE_LDFLAGS)
 
-EXTRA_DIST = xmlrpcserver.py test_conf.sh
+EXTRA_DIST =		\
+	xmlrpcserver.py	\
+	test_conf.sh	\
+	confdata	\
+	qemuxml2argvdata \
+	xml2sexprdata	\
+	nodeinfodata	\
+	virshdata	\
+	xencapsdata	\
+	sexpr2xmldata	\
+	xmconfigdata
 
 noinst_PROGRAMS = xmlrpctest xml2sexprtest sexpr2xmltest virshtest conftest \
 	reconnect xmconfigtest xencapstest qemuxml2argvtest qemuxml2xmltest \
         nodeinfotest
 
+test_scripts = \
+	int-overflow
+EXTRA_DIST += $(test_scripts)
+
 TESTS = xml2sexprtest sexpr2xmltest virshtest test_conf.sh xmconfigtest \
         xencapstest qemuxml2argvtest qemuxml2xmltest nodeinfotest \
-	int-overflow
+	$(test_scripts)
 if ENABLE_XEN_TESTS
   TESTS += reconnect
 endif
