* doc/libvir.html doc/format.html: add missing docs for   <shareable/> on disk devices * src/Makefile.am: fix the tst build rule for missing libraries Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -78,7 +78,7 @@ virsh_CFLAGS = $(COVERAGE_CFLAGS)
 # target to ease building test programs
 #
 tst: tst.c
-	$(CC) $(CFLAGS) $(INCLUDES) -I../include -o tst tst.c .libs/libvirt.a -lxml2 -lxenstore -lpthread
+	$(CC) $(CFLAGS) $(INCLUDES) -I../include -o tst tst.c .libs/libvirt.a $(LIBXML_LIBS) $(VIRSH_LIBS) $(GNUTLS_LIBS) $(LIBS)
 
 COVERAGE_FILES = $(CLIENT_SOURCES:%.c=libvirt_la-%.cov)
 
