--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -52,9 +52,12 @@ if ENABLE_XEN_TESTS
   TESTS += reconnect
 endif
 
+# NB, automake < 1.10 does not provide the real
+# abs_top_{src/build}dir variables, so don't rely
+# on them here. Fake them with 'pwd'
 TESTS_ENVIRONMENT =				\
-  abs_top_builddir='$(abs_top_builddir)'	\
-  abs_top_srcdir='$(abs_top_srcdir)'		\
+  abs_top_builddir=`pwd`/$(top_builddir)	\
+  abs_top_srcdir=`pwd`/$(top_srcdir)		\
   $(VG)
 
 valgrind:
