* configure.in: when configuring with --prefix=/usr i.e. the same   prefix as the installed libvirt, use the same localstatedir /var   (instead of /usr/var) and sysconfdir /etc (instead of /usr/etc) to   be able to connect to the system daemon, and use the system local   options * src/xs_internal.c: avoid error message when non-root cannot open   xenstore * src/xend_internal.c: avoid error message when non-root cannot   directly access xend, in those 2 cases the proxy (or remote code)   should implement the access so there is no need to raise the error   there. Daniel

--- a/configure.in
+++ b/configure.in
@@ -89,6 +89,18 @@ AC_ARG_WITH(html-subdir, AC_HELP_STRING([--with-html-subdir=path],
             [HTML_DIR="$HTML_DIR/\$(PACKAGE)-\$(VERSION)/html"])
 AC_SUBST(HTML_DIR)
 
+dnl if --prefix is /usr, don't use /usr/var for localstatedir
+dnl or /usr/etc for sysconfdir
+dnl as this makes a lot of things break in testing situations
+
+if test $prefix = "/usr" -a $localstatedir = '${prefix}/var' ; then
+    localstatedir='/var'
+fi
+if test $prefix = "/usr" -a $sysconfdir = '${prefix}/etc' ; then
+    sysconfdir='/etc'
+fi
+
+
 dnl Allow to build without Xen, QEMU/KVM, test or remote driver
 AC_ARG_WITH(xen,
 [  --with-xen              add XEN support (on)],[],[with_xen=yes])
